...
    )

    private val STARTER_DATA = listOf(
        "INSERT INTO category_groups VALUES ('fc3825fd-b982-4b72-b768-5b30844cf832','Usual Expenses',0,16384,0,0)",
        "INSERT INTO category_groups VALUES ('2E1F5BDB-209B-43F9-AF2C-3CE28E380C00','Income',1,32768,0,0)",
        "INSERT INTO category_groups VALUES ('a137772f-cf2f-4089-9432-822d2ddc1466','Investments and Savings',0,32768,0,0)",
        "INSERT INTO categories VALUES ('541836f1-e756-4473-a5d0-6c1d3f06c7fa','Food',0,'fc3825fd-b982-4b72-b768-5b30844cf832',16384,0,0,NULL,'{\"source\": \"notes\"}',NULL)",
        "INSERT INTO categories VALUES ('af375fd4-d759-46b3-bffe-74a856151d57','General',0,'fc3825fd-b982-4b72-b768-5b30844cf832',32768,0,0,NULL,'{\"source\": \"notes\"}',NULL)",
        "INSERT INTO categories VALUES ('d4b0f075-3343-4408-91ed-fae94f74e5bf','Bills',0,'fc3825fd-b982-4b72-b768-5b30844cf832',49152,0,0,NULL,'{\"source\": \"notes\"}',NULL)",
        "INSERT INTO categories VALUES ('29ec2c58-8cd3-42fe-9187-7b5dfe0f70a6','Bills (Flexible)',0,'fc3825fd-b982-4b72-b768-5b30844cf832',65536,0,0,NULL,'{\"source\": \"notes\"}',NULL)",
        "INSERT INTO categories VALUES ('3c1699a5-522a-435e-86dc-93d900a14f0e','Income',1,'2E1F5BDB-209B-43F9-AF2C-3CE28E380C00',32768,0,0,NULL,'{\"source\": \"notes\"}',NULL)",
        "INSERT INTO categories VALUES ('506e8d9d-7ed0-4397-84e4-07a9185dc6b2','Starting Balances',1,'2E1F5BDB-209B-43F9-AF2C-3CE28E380C00',32768,0,0,NULL,'{\"source\": \"notes\"}',NULL)",
        "INSERT INTO categories VALUES ('6bbd8472-25d4-4cee-8a11-5bd9f7e83d61','Savings',0,'a137772f-cf2f-4089-9432-822d2ddc1466',32768,0,0,NULL,'{\"source\": \"notes\"}',NULL)",
...
